Fix overflow when Custom gender inputs appear

--- a/fakebook-fe/src/pages/Register/Register.scss
+++ b/fakebook-fe/src/pages/Register/Register.scss
@@ -1,13 +1,17 @@
 .register-page {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
+    height: 100vh;
     align-items: center;
     background-color: #F0F2F5;
+    overflow-y: auto;
 }
 
 div.register-container {
-    height: 80vh;
+    flex: 1;
+    padding-bottom: 60px;
+    height: 90vh;
 }
 
 .register-title h1 {
@@ -22,7 +26,7 @@ div.register-form {
     border-radius: 10px;
     padding: 10px 0px;
     box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
-    max-width: 430px;
+    max-width: 400px;
     width: 100%;
 
     .pre-form {
@@ -201,13 +205,15 @@ div.register-form {
 
 .footer-container {
     height: 20vh;
+
     .languages ul li a,
     .link-list ul li a,
     .footer-copyright p,
-    .footer-copyright p a{
+    .footer-copyright p a {
         color: #385898;
     }
-    .languages{
+
+    .languages {
         border-bottom: 1px solid #DDDFE2;
     }
 }
